# spaceship-simulator

./: .gitignore  AGENTS.md  CMakeLists.txt  readme.md
.agents/skills/cmake-cpp-workflow/: SKILL.md
.agents/skills/cmake-cpp-workflow/agents/: openai.yaml
.agents/skills/verification-loop/: SKILL.md
.agents/skills/verification-loop/agents/: openai.yaml
.codex/: AGENTS.md  config.toml
.codex/agents/: docs-researcher.toml  explorer.toml  reviewer.toml
.github/workflows/: ci.yml
docs/: codex-wsl-setup.md
scripts/: codex-wsl.cmd  codex-wsl.ps1
src/: main.cpp
src/client/: client_snapshot_buffer.cpp  client_snapshot_buffer.hpp
src/server/: bootstrap.cpp  bootstrap.hpp  collision_system.cpp  collision_system.hpp  gravity_field.hpp  gravity_system.cpp  gravity_system.hpp  integration_system.cpp  integration_system.hpp  massive_body_motion_system.cpp  massive_body_motion_system.hpp  ship_control_system.cpp  ship_control_system.hpp  simulation_config.hpp  simulation_math.hpp  simulation_server.cpp  simulation_server.hpp  simulation_world.hpp  snapshot_system.cpp  snapshot_system.hpp  spawning_system.cpp  spawning_system.hpp
src/shared/: sim_types.hpp
tests/: simulation_server_smoke_test.cpp
